--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
 </head>
 <body>
-<div class="aaa"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
-<div class="centered-main-page-element"><p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
-</p><h3>Todo</h3>
+<header class="aaa"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
+<main class="centered-main-page-element">
+<section><div id="topSectionForAddingElementToList"><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div></section>
+<section><h3>Todo</h3>
 <ul id="incompleteTasks">
 <li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt=""></button></li>
-<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg" alt=""></button></li>
-</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt=""></button>
+<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg" alt=""></button></li></section>
+</ul><section><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg" alt=""></button>
 </li>
-</ul>
-</div>
+</ul></section>
+</main>
 <script type="text/javascript" SRC="app.js"></script>
 </body>
 </html>
