--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head><title>Todo App</title>
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+
+<head>
+  <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
 </head>
+
 <body>
-<header class="header"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
-<main class="main">
-<section><label class="label" for="new-task">Add Item</label><div class="row-wrapper"><input id="new-task"class="input input_task" type="text"><button class="button">Add</button></div></section>
-<section><h3>Todo</h3>
-<ul class="list list_uncompleted">
-<li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Pay Bills</label><input type="text" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
-<li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Go Shopping</label><input type="text" value="Go Shopping" class="input input_task"><button class="button button_edit">Save</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li></section>
-</ul><section><h3>Completed</h3><ul class="list list_completed"><li class="list__item list__item_on-edit"><input type="checkbox" class="input" checked><label class="label label_task">See the Doctor</label><input type="text" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button>
-</li>
-</ul></section>
-</main>
-<script type="text/javascript" SRC="app.js"></script>
+  <header class="header"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
+  <main class="main">
+    <section><label class="label" for="new-task">Add Item</label>
+      <div class="row-wrapper"><input id="new-task" class="input input_task" type="text"><button class="button">Add</button></div>
+    </section>
+    <section>
+      <h3>Todo</h3>
+      <ul class="list list_uncompleted">
+        <li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Pay Bills</label><input type="text" value="Pay Bills" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+        <li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Go Shopping</label><input type="text" value="Go Shopping" class="input input_task"><button class="button button_edit">Save</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+    </section>
+    </ul>
+    <section>
+      <h3>Completed</h3>
+      <ul class="list list_completed">
+        <li class="list__item list__item_on-edit"><input type="checkbox" class="input" checked><label class="label label_task">See the Doctor</label><input type="text" value="See the Doctor" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <script type="text/javascript" SRC="app.js"></script>
 </body>
+
 </html>
