--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <header class="header"><img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></header>
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </header>
   <main class="main">
     <section><label class="label" for="new-task">Add Item</label>
       <div class="row-wrapper"><input id="new-task" class="input input_task" type="text"><button class="button">Add</button></div>
