--- a/index.html
+++ b/index.html
@@ -9,24 +9,39 @@
 
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks"><a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks">
+    <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <section><label class="label" for="new-task">Add Item</label>
-      <div class="row-wrapper"><input id="new-task" class="input input_task" type="text"><button class="button">Add</button></div>
+      <div class="row-wrapper"><input id="new-task" class="input input_task" type="text">
+        <button class="button">Add</button></div>
     </section>
     <section>
       <h3>Todo</h3>
       <ul class="list list_uncompleted">
-        <li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Pay Bills</label><input type="text" value="Pay Bills" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
-        <li class="list__item list__item_on-edit"><input type="checkbox" class="input"><label class="label label_task">Go Shopping</label><input type="text" value="Go Shopping" class="input input_task"><button class="button button_edit">Save</button><button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+        <li class="list__item list__item_on-edit">
+          <input type="checkbox" class="input"><label class="label label_task">Pay Bills</label>
+          <input type="text" value="Pay Bills" class="input input_task">
+          <button class="button button_edit">Edit</button>
+          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+        <li class="list__item list__item_on-edit">
+          <input type="checkbox" class="input">
+          <label class="label label_task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input input_task">
+          <button class="button button_edit">Save</button>
+          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+      </ul>
     </section>
-    </ul>
     <section>
       <h3>Completed</h3>
       <ul class="list list_completed">
-        <li class="list__item list__item_on-edit"><input type="checkbox" class="input" checked><label class="label label_task">See the Doctor</label><input type="text" value="See the Doctor" class="input input_task"><button class="button button_edit">Edit</button><button class="button button_delete"><img src="./remove.svg" alt=""></button>
-        </li>
+        <li class="list__item list__item_on-edit">
+          <input type="checkbox" class="input" checked>
+          <label class="label label_task">See the Doctor</label>
+          <input type="text" value="See the Doctor" class="input input_task">
+          <button class="button button_edit">Edit</button>
+          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
       </ul>
     </section>
   </main>
