--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen">
 </head>
 
-<body>
+<body class="page">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix model of prioritizing tasks" class="header__img">
     <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section><label class="label" for="new-task">Add Item</label>
-      <div class="row-wrapper"><input id="new-task" class="input input_task" type="text">
+    <section>
+      <label class="label label_section1" for="new-task">Add Item</label>
+      <div class="row-wrapper"><input id="new-task" class="input input_text input_section1" type="text">
         <button class="button">Add</button></div>
     </section>
     <section>
-      <h3>Todo</h3>
+      <h3 class="title">Todo</h3>
       <ul class="list list_uncompleted">
-        <li class="list__item list__item_on-edit">
-          <input type="checkbox" class="input"><label class="label label_task">Pay Bills</label>
-          <input type="text" value="Pay Bills" class="input input_task">
+        <li class="list__item">
+          <input type="checkbox" class="input input_checkbox"><label class="label label_task">Pay Bills</label>
+          <input type="text" value="Pay Bills" class="input input_text item__input">
           <button class="button button_edit">Edit</button>
-          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+          <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></li>
         <li class="list__item list__item_on-edit">
-          <input type="checkbox" class="input">
-          <label class="label label_task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input input_task">
-          <button class="button button_edit">Save</button>
-          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+          <input type="checkbox" class="input input_checkbox" ">
+          <label class="label label_task label_on-edit ">Go Shopping</label>
+          <input type="text " value="Go Shopping " class="input input_text item__input input_text_on-edit ">
+          <button class="button button_edit ">Save</button>
+          <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button></li>
       </ul>
     </section>
     <section>
-      <h3>Completed</h3>
-      <ul class="list list_completed">
-        <li class="list__item list__item_on-edit">
-          <input type="checkbox" class="input" checked>
-          <label class="label label_task">See the Doctor</label>
-          <input type="text" value="See the Doctor" class="input input_task">
-          <button class="button button_edit">Edit</button>
-          <button class="button button_delete"><img src="./remove.svg" alt=""></button></li>
+      <h3 class="title ">Completed</h3>
+      <ul class="list list_completed ">
+        <li class="list__item list__item_on-edit ">
+          <input type="checkbox " class="input " checked>
+          <label class="label label_task ">See the Doctor</label>
+          <input type="text " value="See the Doctor " class="input input_task ">
+          <button class="button button_edit ">Edit</button>
+          <button class="button button_delete "><img src="./remove.svg " alt=" "></button></li>
       </ul>
     </section>
   </main>
-  <script src="app.js"></script>
+  <script src="app.js "></script>
 </body>
 
 </html>
