fix: edit classes names according to rule 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <h3 class="title ">Completed</h3>
       <ul class="list list_completed ">
         <li class="list__item list__item_on-edit ">
-          <input type="checkbox " class="input " checked>
-          <label class="label label_task ">See the Doctor</label>
-          <input type="text " value="See the Doctor " class="input input_task ">
+          <input type="checkbox " class="input input_checkbox " checked>
+          <label class="label label_task label_completed ">See the Doctor</label>
+          <input type="text " value="See the Doctor " class="input input_text item__input ">
           <button class="button button_edit ">Edit</button>
-          <button class="button button_delete "><img src="./remove.svg " alt=" "></button></li>
+          <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button></li>
       </ul>
     </section>
   </main>
