fix:  set whitespaces according to rule 3.6 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -23,27 +23,36 @@
       <h3 class="title">Todo</h3>
       <ul class="list list_uncompleted">
         <li class="list__item">
-          <input type="checkbox" class="input input_checkbox"><label class="label label_task">Pay Bills</label>
-          <input type="text" value="Pay Bills" class="input input_text item__input">
-          <button class="button button_edit">Edit</button>
-          <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></li>
+          <div class="list__item__content">
+            <input type="checkbox" class="input input_checkbox"><label class="label label_task">Pay Bills</label>
+            <input type="text" value="Pay Bills" class="input input_text item__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
+          </div>
+        </li>
         <li class="list__item list__item_on-edit">
-          <input type="checkbox" class="input input_checkbox" ">
-          <label class="label label_task label_on-edit ">Go Shopping</label>
-          <input type="text " value="Go Shopping " class="input input_text item__input input_text_on-edit ">
-          <button class="button button_edit ">Save</button>
-          <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button></li>
+          <div class="list__item__content">
+            <input type="checkbox" class="input input_checkbox">
+            <label class="label label_task label_on-edit ">Go Shopping</label>
+            <input type="text " value="Go Shopping " class="input input_text item__input input_text_on-edit ">
+            <button class="button button_edit ">Save</button>
+            <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button>
+          </div>
+        </li>
       </ul>
     </section>
     <section>
       <h3 class="title ">Completed</h3>
       <ul class="list list_completed ">
-        <li class="list__item list__item_on-edit ">
-          <input type="checkbox " class="input input_checkbox " checked>
-          <label class="label label_task label_completed ">See the Doctor</label>
-          <input type="text " value="See the Doctor " class="input input_text item__input ">
-          <button class="button button_edit ">Edit</button>
-          <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button></li>
+        <li class="list__item list__item_on-edit">
+          <div class="list__item__content">
+            <input type="checkbox " class="input input_checkbox " checked>
+            <label class="label label_task label_completed ">See the Doctor</label>
+            <input type="text " value="See the Doctor " class="input input_text item__input ">
+            <button class="button button_edit ">Edit</button>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
+          </div>
+        </li>
       </ul>
     </section>
   </main>
