fix: fix the functionality of the app

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <main class="main">
     <section>
       <label class="label label_section1" for="new-task">Add Item</label>
-      <div class="row-wrapper"><input id="new-task" class="input input_text input_section1" type="text">
-        <button class="button">Add</button></div>
+      <div class="row-wrapper">
+        <input id="new-task" class="input input_text input_section1" type="text">
+        <button class="button">Add</button>
+      </div>
     </section>
     <section>
       <h3 class="title">Todo</h3>
@@ -33,30 +35,29 @@
         <li class="list__item list__item_on-edit">
           <div class="list__item__content">
             <input type="checkbox" class="input input_checkbox">
-            <label class="label label_task label_on-edit ">Go Shopping</label>
-            <input type="text " value="Go Shopping " class="input input_text item__input input_text_on-edit ">
-            <button class="button button_edit ">Save</button>
-            <button class="button button_delete "><img src="./remove.svg " alt=" " class="button__img "></button>
-          </div>
+            <label class="label label_task label_on-edit">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input input_text item__input input_text_on-edit">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></div>
         </li>
       </ul>
     </section>
     <section>
-      <h3 class="title ">Completed</h3>
-      <ul class="list list_completed ">
+      <h3 class="title">Completed</h3>
+      <ul class="list list_completed">
         <li class="list__item list__item_on-edit">
           <div class="list__item__content">
-            <input type="checkbox " class="input input_checkbox " checked>
-            <label class="label label_task label_completed ">See the Doctor</label>
-            <input type="text " value="See the Doctor " class="input input_text item__input ">
-            <button class="button button_edit ">Edit</button>
-            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
-          </div>
+            <input type="checkbox" class="input input_checkbox" checked>
+            <label class="label label_task label_completed">See the Doctor</label>
+            <input type="text" value="See the Doctor" class="input input_text item__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></div>
         </li>
       </ul>
     </section>
   </main>
-  <script src="app.js "></script>
+  <script src="app.js"></script>
+
 </body>
 
 </html>
