--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <label class="label label_task label_completed">See the Doctor</label>
             <input type="text" value="See the Doctor" class="input input_text item__input">
             <button class="button button_edit">Edit</button>
-            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></div>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
+          </div>
         </li>
       </ul>
     </section>
