--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <label class="label label_task label_on-edit">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input input_text item__input input_text_on-edit">
             <button class="button button_edit">Save</button>
-            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button></div>
+            <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
+          </div>
         </li>
       </ul>
     </section>
