fix: rename class according to rule 2.1 BEM

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3 class="title">Todo</h3>
       <ul class="list list_uncompleted">
         <li class="list__item">
-          <div class="list__item__content">
+          <div class="list__content">
             <input type="checkbox" class="input input_checkbox"><label class="label label_task">Pay Bills</label>
             <input type="text" value="Pay Bills" class="input input_text item__input">
             <button class="button button_edit">Edit</button>
@@ -33,7 +33,7 @@
           </div>
         </li>
         <li class="list__item list__item_on-edit">
-          <div class="list__item__content">
+          <div class="list__content">
             <input type="checkbox" class="input input_checkbox">
             <label class="label label_task label_on-edit">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input input_text item__input input_text_on-edit">
@@ -47,7 +47,7 @@
       <h3 class="title">Completed</h3>
       <ul class="list list_completed">
         <li class="list__item list__item_on-edit">
-          <div class="list__item__content">
+          <div class="list__content">
             <input type="checkbox" class="input input_checkbox" checked>
             <label class="label label_task label_completed">See the Doctor</label>
             <input type="text" value="See the Doctor" class="input input_text item__input">
