fix: rename classes according to rule 2.1 BEM

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="list__content">
             <input type="checkbox" class="input input_checkbox">
             <label class="label label_task label_on-edit">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="input input_text item__input input_text_on-edit">
+            <input type="text" value="Go Shopping" class="input input_text item__input text_on-edit">
             <button class="button button_edit">Save</button>
             <button class="button button_delete"><img src="./remove.svg" alt="" class="button__img"></button>
           </div>
